# netbox-cisco-support

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
netbox_cisco_support/: __init__.py  cisco_client.py  forms.py  models.py  navigation.py  urls.py  views.py  widgets.py
netbox_cisco_support/migrations/: 0001_initial.py
netbox_cisco_support/templates/netbox_cisco_support/: device_tab.html  device_tab_content.html  settings.html
netbox_cisco_support/templates/netbox_cisco_support/widgets/: lifecycle_summary.html
