[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-cisco-support-api"
version = "1.0.6"
description = "NetBox plugin for Cisco Support information including product details, EoX dates, bugs, and security advisories"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "sieteunoseis", email = "jeremy.worden@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
keywords = ["netbox", "cisco", "support", "eox", "psirt", "bugs"]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/sieteunoseis/netbox-cisco-support"
Repository = "https://github.com/sieteunoseis/netbox-cisco-support.git"
Issues = "https://github.com/sieteunoseis/netbox-cisco-support/issues"
Changelog = "https://github.com/sieteunoseis/netbox-cisco-support/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["netbox_cisco_support*"]

[tool.setuptools.package-data]
netbox_cisco_support = ["templates/**/*.html"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88
